# QuantumCoin-Blockexplorer

./: Caddyfile  README.md  docker-compose.yml
DB migrations: migrations/: 001_init.sql
api/: Cargo.toml  Dockerfile
api/src/: main.rs
indexer/: Cargo.toml  Dockerfile
indexer/src/: main.rs
web/: Dockerfile  index.html  package.json
web/src/: App.tsx  main.tsx
web/src/pages/: Address.tsx  Block.tsx  Tx.tsx
