[package]
name = "qtc-explorer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
